@@ -44,7 +44,6 @@
           </div>
         </div>
 
-        
         <div id="termsofservice-form-element" class="control-group">
           <%= f.check_box :terms_of_service %>
           <strong>
@@ -52,7 +51,7 @@
             <a href="/pages/privacy-and-policy" target="popup">Terms of Service and Privacy Policy</a>
           </strong>
         </div>
-      
+
         <div class="control-group">
           <div class="controls">
             <%= f.submit "Register", class: "btn btn-success", 'data-disable-with' => 'Processing...' %>
